--- a/deliverables/pike/puppet-aodh.yaml
+++ b/deliverables/pike/puppet-aodh.yaml
@@ -2,17 +2,17 @@
 launchpad: puppet-aodh
 release-model: cycle-trailing
 releases:
-- projects:
-  - hash: 18b75c43fc8c30b715cecf8cd46607dea8cdbbb4
-    repo: openstack/puppet-aodh
-  version: 11.0.0
-- version: 11.1.0
-  projects:
-  - repo: openstack/puppet-aodh
-    hash: 01e5448ab6853d7a12927683f327369237706444
-- version: 11.2.0
-  projects:
-  - repo: openstack/puppet-aodh
-    hash: 4954b5e62641087c11486821b801757a3b56b5ed
-team: Puppet OpenStack
+  - projects:
+      - hash: 18b75c43fc8c30b715cecf8cd46607dea8cdbbb4
+        repo: openstack/puppet-aodh
+    version: 11.0.0
+  - version: 11.1.0
+    projects:
+      - repo: openstack/puppet-aodh
+        hash: 01e5448ab6853d7a12927683f327369237706444
+  - version: 11.2.0
+    projects:
+      - repo: openstack/puppet-aodh
+        hash: 4954b5e62641087c11486821b801757a3b56b5ed
+team: 'Puppet OpenStack'
 type: other
