--- a/deliverables/pike/puppet-keystone.yaml
+++ b/deliverables/pike/puppet-keystone.yaml
@@ -2,17 +2,17 @@
 launchpad: puppet-keystone
 release-model: cycle-trailing
 releases:
-- projects:
-  - hash: f7d70a83343bdbb6138243c7922883f3cb54dfa0
-    repo: openstack/puppet-keystone
-  version: 11.0.0
-- version: 11.1.0
-  projects:
-  - repo: openstack/puppet-keystone
-    hash: 488a91ff18b6c60cb898b0f31bd8d339da991600
-- version: 11.2.0
-  projects:
-  - repo: openstack/puppet-keystone
-    hash: c419058823800a4a7f1c80ac46c9095e0f1c1abf
-team: Puppet OpenStack
+  - projects:
+      - hash: f7d70a83343bdbb6138243c7922883f3cb54dfa0
+        repo: openstack/puppet-keystone
+    version: 11.0.0
+  - version: 11.1.0
+    projects:
+      - repo: openstack/puppet-keystone
+        hash: 488a91ff18b6c60cb898b0f31bd8d339da991600
+  - version: 11.2.0
+    projects:
+      - repo: openstack/puppet-keystone
+        hash: c419058823800a4a7f1c80ac46c9095e0f1c1abf
+team: 'Puppet OpenStack'
 type: other
