--- a/deliverables/ocata/puppet-openstack_extras.yaml
+++ b/deliverables/ocata/puppet-openstack_extras.yaml
@@ -1,30 +1,30 @@
 ---
 launchpad: puppet-openstack-extras
-team: Puppet OpenStack
+team: 'Puppet OpenStack'
 release-notes: https://docs.openstack.org/releasenotes/puppet-openstack_extras/ocata.html
 type: other
 release-model: cycle-trailing
 branches:
-- name: stable/ocata
-  location: 10.3.0
+  - name: stable/ocata
+    location: 10.3.0
 releases:
-- version: 10.0.0
-  projects:
-  - repo: openstack/puppet-openstack_extras
-    hash: f4614e7dcdc57aec9f72b749a65a1b7035af13f3
-- version: 10.1.0
-  projects:
-  - repo: openstack/puppet-openstack_extras
-    hash: e7e53231d5b11c9d80fb4324bc821d2d4062874c
-- version: 10.2.0
-  projects:
-  - repo: openstack/puppet-openstack_extras
-    hash: 46525780e90870d22d532d24f120ac413e6a6f97
-- version: 10.3.0
-  projects:
-  - repo: openstack/puppet-openstack_extras
-    hash: cf635142a95ff853bd3ce8cd70148a3b2d966ad0
-- version: 10.3.1
-  projects:
-  - repo: openstack/puppet-openstack_extras
-    hash: 84a1dfea27a0aeb8e78087024f54aff261ff7780
+  - version: 10.0.0
+    projects:
+      - repo: openstack/puppet-openstack_extras
+        hash: f4614e7dcdc57aec9f72b749a65a1b7035af13f3
+  - version: 10.1.0
+    projects:
+      - repo: openstack/puppet-openstack_extras
+        hash: e7e53231d5b11c9d80fb4324bc821d2d4062874c
+  - version: 10.2.0
+    projects:
+      - repo: openstack/puppet-openstack_extras
+        hash: 46525780e90870d22d532d24f120ac413e6a6f97
+  - version: 10.3.0
+    projects:
+      - repo: openstack/puppet-openstack_extras
+        hash: cf635142a95ff853bd3ce8cd70148a3b2d966ad0
+  - version: 10.3.1
+    projects:
+      - repo: openstack/puppet-openstack_extras
+        hash: 84a1dfea27a0aeb8e78087024f54aff261ff7780
