--- a/deliverables/ocata/puppet-zaqar.yaml
+++ b/deliverables/ocata/puppet-zaqar.yaml
@@ -1,30 +1,30 @@
 ---
 launchpad: puppet-zaqar
-team: Puppet OpenStack
+team: 'Puppet OpenStack'
 release-notes: https://docs.openstack.org/releasenotes/puppet-zaqar/ocata.html
 type: other
 release-model: cycle-trailing
 branches:
-- name: stable/ocata
-  location: 10.3.0
+  - name: stable/ocata
+    location: 10.3.0
 releases:
-- version: 10.0.0
-  projects:
-  - repo: openstack/puppet-zaqar
-    hash: 641be0c1e0ba961f6570d6754d60d932dc6075f1
-- version: 10.1.0
-  projects:
-  - repo: openstack/puppet-zaqar
-    hash: be984e4577ec5dda8d401fbe5be54cb133ba963e
-- version: 10.2.1
-  projects:
-  - repo: openstack/puppet-zaqar
-    hash: de88098ee58e198292f4744c476d54627d9a0c17
-- version: 10.3.0
-  projects:
-  - repo: openstack/puppet-zaqar
-    hash: 371d810300cc1c839752b71789812502e6bebb07
-- version: 10.3.1
-  projects:
-  - repo: openstack/puppet-zaqar
-    hash: 841539738ae4704214e92775954abd9dfbe186e7
+  - version: 10.0.0
+    projects:
+      - repo: openstack/puppet-zaqar
+        hash: 641be0c1e0ba961f6570d6754d60d932dc6075f1
+  - version: 10.1.0
+    projects:
+      - repo: openstack/puppet-zaqar
+        hash: be984e4577ec5dda8d401fbe5be54cb133ba963e
+  - version: 10.2.1
+    projects:
+      - repo: openstack/puppet-zaqar
+        hash: de88098ee58e198292f4744c476d54627d9a0c17
+  - version: 10.3.0
+    projects:
+      - repo: openstack/puppet-zaqar
+        hash: 371d810300cc1c839752b71789812502e6bebb07
+  - version: 10.3.1
+    projects:
+      - repo: openstack/puppet-zaqar
+        hash: 841539738ae4704214e92775954abd9dfbe186e7
