--- a/deliverables/pike/puppet-cinder.yaml
+++ b/deliverables/pike/puppet-cinder.yaml
@@ -2,17 +2,17 @@
 launchpad: puppet-cinder
 release-model: cycle-trailing
 releases:
-- projects:
-  - hash: 219ea60a20acbdde9bc3f2503302871270951bb0
-    repo: openstack/puppet-cinder
-  version: 11.0.0
-- version: 11.1.0
-  projects:
-  - repo: openstack/puppet-cinder
-    hash: 257519db52de13a036e4b5ba81216ca74a17d9ed
-- version: 11.2.0
-  projects:
-  - repo: openstack/puppet-cinder
-    hash: dab970ae3b42baa2ab150cd679d97d9ff9cfe608
-team: Puppet OpenStack
+  - projects:
+      - hash: 219ea60a20acbdde9bc3f2503302871270951bb0
+        repo: openstack/puppet-cinder
+    version: 11.0.0
+  - version: 11.1.0
+    projects:
+      - repo: openstack/puppet-cinder
+        hash: 257519db52de13a036e4b5ba81216ca74a17d9ed
+  - version: 11.2.0
+    projects:
+      - repo: openstack/puppet-cinder
+        hash: dab970ae3b42baa2ab150cd679d97d9ff9cfe608
+team: 'Puppet OpenStack'
 type: other
