--- a/deliverables/pike/puppet-designate.yaml
+++ b/deliverables/pike/puppet-designate.yaml
@@ -2,17 +2,17 @@
 launchpad: puppet-designate
 release-model: cycle-trailing
 releases:
-- projects:
-  - hash: bd183e0619a1b69e0160f5eb48f7257566b3523a
-    repo: openstack/puppet-designate
-  version: 11.0.0
-- version: 11.1.0
-  projects:
-  - repo: openstack/puppet-designate
-    hash: 1c8b37123c3335f3a2070488c483d1a9c69a68f9
-- version: 11.2.0
-  projects:
-  - repo: openstack/puppet-designate
-    hash: a39305508133db8a7d964cafda8f8689264618e0
-team: Puppet OpenStack
+  - projects:
+      - hash: bd183e0619a1b69e0160f5eb48f7257566b3523a
+        repo: openstack/puppet-designate
+    version: 11.0.0
+  - version: 11.1.0
+    projects:
+      - repo: openstack/puppet-designate
+        hash: 1c8b37123c3335f3a2070488c483d1a9c69a68f9
+  - version: 11.2.0
+    projects:
+      - repo: openstack/puppet-designate
+        hash: a39305508133db8a7d964cafda8f8689264618e0
+team: 'Puppet OpenStack'
 type: other
