--- a/deliverables/pike/puppet-gnocchi.yaml
+++ b/deliverables/pike/puppet-gnocchi.yaml
@@ -2,17 +2,17 @@
 launchpad: puppet-gnocchi
 release-model: cycle-trailing
 releases:
-- projects:
-  - hash: acc4303d1b9480532b3b35dc06045d677f467d3e
-    repo: openstack/puppet-gnocchi
-  version: 11.0.0
-- version: 11.1.0
-  projects:
-  - repo: openstack/puppet-gnocchi
-    hash: 0f2440227662fc113180bd438701d71629e2f88f
-- version: 11.2.0
-  projects:
-  - repo: openstack/puppet-gnocchi
-    hash: 3ab9386d33ad568cd0721278e52a6ccca504b821
-team: Puppet OpenStack
+  - projects:
+      - hash: acc4303d1b9480532b3b35dc06045d677f467d3e
+        repo: openstack/puppet-gnocchi
+    version: 11.0.0
+  - version: 11.1.0
+    projects:
+      - repo: openstack/puppet-gnocchi
+        hash: 0f2440227662fc113180bd438701d71629e2f88f
+  - version: 11.2.0
+    projects:
+      - repo: openstack/puppet-gnocchi
+        hash: 3ab9386d33ad568cd0721278e52a6ccca504b821
+team: 'Puppet OpenStack'
 type: other
