--- a/deliverables/pike/puppet-ironic.yaml
+++ b/deliverables/pike/puppet-ironic.yaml
@@ -2,17 +2,17 @@
 launchpad: puppet-ironic
 release-model: cycle-trailing
 releases:
-- projects:
-  - hash: f3ec8361fca7aaf18e9277f7bc40fee10f490adc
-    repo: openstack/puppet-ironic
-  version: 11.0.0
-- version: 11.1.0
-  projects:
-  - repo: openstack/puppet-ironic
-    hash: c5d183308eb59bc3e6a41528e74b3f91a91501c4
-- version: 11.2.0
-  projects:
-  - repo: openstack/puppet-ironic
-    hash: 4a27e03c206314ef7d6d05b870c7ceebc0c05c06
-team: Puppet OpenStack
+  - projects:
+      - hash: f3ec8361fca7aaf18e9277f7bc40fee10f490adc
+        repo: openstack/puppet-ironic
+    version: 11.0.0
+  - version: 11.1.0
+    projects:
+      - repo: openstack/puppet-ironic
+        hash: c5d183308eb59bc3e6a41528e74b3f91a91501c4
+  - version: 11.2.0
+    projects:
+      - repo: openstack/puppet-ironic
+        hash: 4a27e03c206314ef7d6d05b870c7ceebc0c05c06
+team: 'Puppet OpenStack'
 type: other
