--- a/deliverables/pike/puppet-magnum.yaml
+++ b/deliverables/pike/puppet-magnum.yaml
@@ -2,17 +2,17 @@
 launchpad: puppet-magnum
 release-model: cycle-trailing
 releases:
-- projects:
-  - hash: 3a3c9102a33d2c19386b88bfe5fb6b2adc2cefb9
-    repo: openstack/puppet-magnum
-  version: 11.0.0
-- version: 11.1.0
-  projects:
-  - repo: openstack/puppet-magnum
-    hash: 3004b1ea53ebf817f6e1ea3e8de397506bdd2611
-- version: 11.2.0
-  projects:
-  - repo: openstack/puppet-magnum
-    hash: bc082235035cec6539aa57c36d9bf2004797c312
-team: Puppet OpenStack
+  - projects:
+      - hash: 3a3c9102a33d2c19386b88bfe5fb6b2adc2cefb9
+        repo: openstack/puppet-magnum
+    version: 11.0.0
+  - version: 11.1.0
+    projects:
+      - repo: openstack/puppet-magnum
+        hash: 3004b1ea53ebf817f6e1ea3e8de397506bdd2611
+  - version: 11.2.0
+    projects:
+      - repo: openstack/puppet-magnum
+        hash: bc082235035cec6539aa57c36d9bf2004797c312
+team: 'Puppet OpenStack'
 type: other
