--- a/deliverables/pike/puppet-mistral.yaml
+++ b/deliverables/pike/puppet-mistral.yaml
@@ -2,17 +2,17 @@
 launchpad: puppet-mistral
 release-model: cycle-trailing
 releases:
-- projects:
-  - hash: 68eb72297a102f48490dfc71eac16d7d52f42aaa
-    repo: openstack/puppet-mistral
-  version: 11.0.0
-- version: 11.1.0
-  projects:
-  - repo: openstack/puppet-mistral
-    hash: 53d9021996d3e6daa844bda71b2d07deecb93b10
-- version: 11.2.0
-  projects:
-  - repo: openstack/puppet-mistral
-    hash: 97f7ca4a8c4d04aec9dc36fe233d7b74ba15fc7a
-team: Puppet OpenStack
+  - projects:
+      - hash: 68eb72297a102f48490dfc71eac16d7d52f42aaa
+        repo: openstack/puppet-mistral
+    version: 11.0.0
+  - version: 11.1.0
+    projects:
+      - repo: openstack/puppet-mistral
+        hash: 53d9021996d3e6daa844bda71b2d07deecb93b10
+  - version: 11.2.0
+    projects:
+      - repo: openstack/puppet-mistral
+        hash: 97f7ca4a8c4d04aec9dc36fe233d7b74ba15fc7a
+team: 'Puppet OpenStack'
 type: other
