--- a/deliverables/pike/puppet-neutron.yaml
+++ b/deliverables/pike/puppet-neutron.yaml
@@ -2,17 +2,17 @@
 launchpad: puppet-neutron
 release-model: cycle-trailing
 releases:
-- projects:
-  - hash: 166f65f5ad3de8264142f5a4abe0f03d5bff40e5
-    repo: openstack/puppet-neutron
-  version: 11.0.0
-- version: 11.1.0
-  projects:
-  - repo: openstack/puppet-neutron
-    hash: 888c480eab625e3f3aee32be818433bc7a4e6d6c
-- version: 11.2.0
-  projects:
-  - repo: openstack/puppet-neutron
-    hash: 63a00045929fb3483866df9eea0390ebee5f52c5
-team: Puppet OpenStack
+  - projects:
+      - hash: 166f65f5ad3de8264142f5a4abe0f03d5bff40e5
+        repo: openstack/puppet-neutron
+    version: 11.0.0
+  - version: 11.1.0
+    projects:
+      - repo: openstack/puppet-neutron
+        hash: 888c480eab625e3f3aee32be818433bc7a4e6d6c
+  - version: 11.2.0
+    projects:
+      - repo: openstack/puppet-neutron
+        hash: 63a00045929fb3483866df9eea0390ebee5f52c5
+team: 'Puppet OpenStack'
 type: other
