--- a/deliverables/pike/puppet-openstacklib.yaml
+++ b/deliverables/pike/puppet-openstacklib.yaml
@@ -2,17 +2,17 @@
 launchpad: puppet-openstacklib
 release-model: cycle-trailing
 releases:
-- projects:
-  - hash: f1fa56a5f8f1d5716cc280aee70a533b4fc48503
-    repo: openstack/puppet-openstacklib
-  version: 11.0.0
-- version: 11.1.0
-  projects:
-  - repo: openstack/puppet-openstacklib
-    hash: c6f6a3f8970cc3a88621015b858c78ac7403b3a4
-- version: 11.2.0
-  projects:
-  - repo: openstack/puppet-openstacklib
-    hash: b0201b3411067bc1818f027b71e82d0e1b0dd573
-team: Puppet OpenStack
+  - projects:
+      - hash: f1fa56a5f8f1d5716cc280aee70a533b4fc48503
+        repo: openstack/puppet-openstacklib
+    version: 11.0.0
+  - version: 11.1.0
+    projects:
+      - repo: openstack/puppet-openstacklib
+        hash: c6f6a3f8970cc3a88621015b858c78ac7403b3a4
+  - version: 11.2.0
+    projects:
+      - repo: openstack/puppet-openstacklib
+        hash: b0201b3411067bc1818f027b71e82d0e1b0dd573
+team: 'Puppet OpenStack'
 type: other
