--- a/deliverables/pike/puppet-watcher.yaml
+++ b/deliverables/pike/puppet-watcher.yaml
@@ -2,17 +2,17 @@
 launchpad: puppet-watcher
 release-model: cycle-trailing
 releases:
-- projects:
-  - hash: bb5eeddd8b4cdfa9a2451e387f4fa5ab560029f0
-    repo: openstack/puppet-watcher
-  version: 11.0.0
-- version: 11.1.0
-  projects:
-  - repo: openstack/puppet-watcher
-    hash: 056cce1a8a7e90f85a1647ce60f892bf50aef90c
-- version: 11.2.0
-  projects:
-  - repo: openstack/puppet-watcher
-    hash: 15d460cca30e7a60bf573c443c3228d6236f36cd
-team: Puppet OpenStack
+  - projects:
+      - hash: bb5eeddd8b4cdfa9a2451e387f4fa5ab560029f0
+        repo: openstack/puppet-watcher
+    version: 11.0.0
+  - version: 11.1.0
+    projects:
+      - repo: openstack/puppet-watcher
+        hash: 056cce1a8a7e90f85a1647ce60f892bf50aef90c
+  - version: 11.2.0
+    projects:
+      - repo: openstack/puppet-watcher
+        hash: 15d460cca30e7a60bf573c443c3228d6236f36cd
+team: 'Puppet OpenStack'
 type: other
